basic design header, hero-section and projects-card-sention

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/style.css" />
     <script src="./scripts/script.js" defer></script>
   </head>
@@ -25,11 +26,70 @@
         </ul>
       </section>
     </header>
-    <section class="container">
-        <section class="hero">
-            <h1>YOUR NAME</h1>
-            <p>FULL STACK DEVELOPER</p>
+    <!-- <section class="container">
+      <section class="hero">
+        <section class="left-section">
+          <h1>YOUR NAME</h1>
+          <p id="profession">FULL STACK DEVELOPER</p>
+          <p id="hero-section-discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, quisquam quaerat inventore laborum ducimus, magnam vitae, voluptates necessitatibus veritatis vel error repudiandae odio cumque sit est. Consectetur, velit perferendis? Natus?</p>
+          <div class="button-container">
+            <a href="#">GITHUB</a>
+            <a href="#">PROJECTS</a>
+          </div>
         </section>
+      </section>
+    </section> -->
+    <section class="container">
+      <div class="projects">
+        <h1>PROJECTS</h1>
+        <div class="projects-card-container">
+          <div class="project-card">
+            <div class="project-card-image">
+              <div class="project-image-filter"></div>
+              <button id="project-card-menu-icon" class="project-card-menu"><i class="fa-solid fa-ellipsis-vertical"></i></button>
+              <div class="projects-links hide" id="projects-links">
+                <a href="#">GITHUB</a>
+                <a href="#">PROJECTS</a>
+              </div>
+              <div class="project-contents">
+                <h3>Project Name</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Ipsum, ducimus iusto officiis
+                </p>
+                <button>HTML</button>
+                <button>CSS</button>
+                <button>JAVASCRIPT</button>
+                <button>REACT</button>
+                <button>TAILWIND CSS</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <div class="project-card-image">
+              <div class="project-image-filter"></div>
+              <button id="project-card-menu-icon" class="project-card-menu"><i class="fa-solid fa-ellipsis-vertical"></i></button>
+              <div class="projects-links hide" id="projects-links">
+                <a href="#">GITHUB</a>
+                <a href="#">PROJECTS</a>
+              </div>
+              <div class="project-contents">
+                <h3>Project Name</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Ipsum, ducimus iusto officiis
+                </p>
+                <button>HTML</button>
+                <button>CSS</button>
+                <button>JAVASCRIPT</button>
+                <button>REACT</button>
+                <button>TAILWIND CSS</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
